<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Timecrypt for Android</string>
    <string name="app_name_short" translatable="false">Timecrypt</string>

    <string name="error_template">An error occurred: "%s".\nCheck your message data and try again.</string>
    <string name="error_server">A server error occurred: "%s". Please file a bug report by tapping the logo.</string>
    <string name="error_unknown">An unknown error occurred. Please file a bug report by tapping the logo.</string>
    <string name="error_internal">Internal error</string> <!-- -1 -->
    <string name="error_missing_id">Missing message identifier</string> <!-- -2 -->
    <string name="error_invalid_id">Invalid message identifier</string> <!-- -3 -->
    <string name="error_missing_text">Missing message text</string> <!-- -4 -->
    <string name="error_title_bounds">Title length is out of bounds</string> <!-- -5 -->
    <string name="error_text_bounds">Text length is out of bounds</string> <!-- -6 -->
    <string name="error_views_bounds">Allowed views are out of bounds</string> <!-- -7 -->
    <string name="error_password_unusable">Cannot use that password</string> <!-- -8 -->
    <string name="error_destruct_date_bounds">Cannot use that destruct date</string> <!-- -9 -->
    <string name="error_email_to_invalid">Invitation email is not valid</string> <!-- -10 -->
    <string name="error_email_from_invalid">Notification email is not valid</string> <!-- -11 -->

    <plurals name="plural_day">
        <item quantity="one">Day</item>
        <item quantity="two">Days</item>
        <item quantity="few">Days</item>
        <item quantity="many">Days</item>
        <item quantity="other">Days</item>
        <item quantity="zero">Days</item>
    </plurals>

    <plurals name="plural_week">
        <item quantity="one">Week</item>
        <item quantity="two">Weeks</item>
        <item quantity="few">Weeks</item>
        <item quantity="many">Weeks</item>
        <item quantity="other">Weeks</item>
        <item quantity="zero">Weeks</item>
    </plurals>

    <plurals name="plural_month">
        <item quantity="one">Month</item>
        <item quantity="two">Months</item>
        <item quantity="few">Months</item>
        <item quantity="many">Months</item>
        <item quantity="other">Months</item>
        <item quantity="zero">Months</item>
    </plurals>

    <plurals name="plural_year">
        <item quantity="one">Year</item>
        <item quantity="two">Years</item>
        <item quantity="few">Years</item>
        <item quantity="many">Years</item>
        <item quantity="other">Years</item>
        <item quantity="zero">Years</item>
    </plurals>

    <plurals name="plural_how_many_times">
        <item quantity="one">once</item>
        <item quantity="two">twice</item>
        <item quantity="few">%d times</item>
        <item quantity="many">%d times</item>
        <item quantity="other">%d times</item>
        <item quantity="zero">never</item>
    </plurals>

    <plurals name="views_left">
        <item quantity="one">a single view left</item>
        <item quantity="two">no more views left</item>
        <item quantity="few">%d views left</item>
        <item quantity="many">%d views left</item>
        <item quantity="other">%d views left</item>
        <item quantity="zero">no views left</item>
    </plurals>

    <string name="progress_creating">Creating…</string>
    <string name="progress_unlocking">Unlocking your message…</string>
    <string name="message_create">CREATE MESSAGE</string>
    <string name="message_not_created">Message not created</string>
    <string name="message_cancel" tools:ignore="ButtonCase">CANCEL</string>
    <string name="link_explanation">Your message has been created.\nIt\'s safely stored at this location:</string>
    <string name="link_more_info">Your message is set to self-destruct on %1$s, or after it\'s been read %2$s.</string>
    <string name="link_copy_label">Timecrypt Message Link</string>
    <string name="link_copy_success">Copied. Just paste and you\'re done.</string>
    <string name="link_share_content_title">Psssst. I have a Timecrypt message for you.</string>
    <string name="link_share_chooser_title">How do you want to send it?</string>
    <string name="link_create_new">CREATE ONE MORE</string>
    <string name="read_info">Your message is ready. It has %1$s, and it self-destructs on %2$s. Contents are:</string>
    <string name="read_locked">This message is locked using a password.\nEnter the password to continue.</string>
    <string name="read_unlock">UNLOCK</string>
    <string name="read_create_own">CREATE NEW MESSAGE</string>

    <string name="title_views">ALLOWED VIEWS</string>
    <string name="title_destruct_date">SELF-DESTRUCT DATE</string>
    <string name="title_delivery">DELIVERY</string>

    <string name="title_edit_hint">TYPE MESSAGE TITLE</string>
    <string name="text_hint">TYPE A SECRET MESSAGE HERE\nOR TAP THE LOGO FOR HELP</string>
    <string name="password_hint">PASSWORD</string>
    <string name="delivery_email_hint">DESTINATION EMAIL</string>
    <string name="delivery_notification_hint">NOTIFICATION EMAIL</string>
    <string name="delivery_destination_email_more_info">We will send the message\nlink to this email address</string>
    <string name="delivery_notification_email_more_info">We will send a notification to this\nemail address when the message is read</string>

    <string name="desc_logo_title">Timecrypt logo</string>
    <string name="desc_tab_text">Message tab</string>
    <string name="desc_tab_views">Views tab</string>
    <string name="desc_tab_destruct">Destruct tab</string>
    <string name="desc_tab_delivery">Delivery tab</string>
    <string name="desc_delivery_info">More information</string>
    <string name="desc_link_share">Share message link</string>
    <string name="desc_link_copy">Copy message link</string>

</resources>
