<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="co.timecrypt.android.activities.LinkDisplayActivity"
    tools:ignore="Overdraw">

    <ImageView
        android:id="@+id/titleLogo"
        android:layout_width="@dimen/title_item_size"
        android:layout_height="@dimen/title_item_size"
        android:layout_marginBottom="@dimen/content_vertical_spacing"
        android:contentDescription="@string/desc_logo_title"
        android:scaleType="centerInside"
        android:src="@drawable/ic_logo_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="@dimen/link_display_content_width"
        android:padding="@dimen/text_padding"
        android:text="@string/link_explanation"
        android:textColor="@color/mainLightShade"
        android:textSize="@dimen/link_display_text_size" />

    <TextView
        android:id="@+id/messageUrlDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_background_active"
        android:ellipsize="marquee"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:maxLines="1"
        android:padding="@dimen/text_padding"
        android:requiresFadingEdge="horizontal"
        android:textColor="@color/mainLighterShade"
        android:textIsSelectable="false"
        android:textSize="@dimen/link_display_text_size"
        android:textStyle="bold"
        tools:text="http://www.timecrypt.co/?c=message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/messageUrlCopy"
            android:layout_width="@dimen/tab_item_size"
            android:layout_height="@dimen/tab_item_size"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/desc_link_copy"
            android:padding="@dimen/tab_item_padding"
            android:src="@drawable/ic_copy" />

        <ImageView
            android:id="@+id/messageUrlShare"
            android:layout_width="@dimen/tab_item_size"
            android:layout_height="@dimen/tab_item_size"
            android:background="@drawable/icon_background"
            android:contentDescription="@string/desc_link_share"
            android:padding="@dimen/tab_item_padding"
            android:src="@drawable/ic_share" />

    </LinearLayout>

    <TextView
        android:id="@+id/messageUrlInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxWidth="@dimen/link_display_content_width"
        android:padding="@dimen/text_padding"
        android:textColor="@color/mainLightShade"
        android:textSize="@dimen/link_display_text_size"
        tools:text="@string/link_more_info" />

    <Button
        android:id="@+id/buttonNewMessage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="@dimen/tab_item_padding"
        android:layout_marginRight="@dimen/tab_item_padding"
        android:background="@drawable/button_background"
        android:text="@string/link_create_new"
        android:textAllCaps="true"
        android:textColor="@color/color_button_text"
        android:textSize="@dimen/button_text_size"
        android:visibility="visible" />

</LinearLayout>
