<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="co.timecrypt.android.MessageActivity">

    <LinearLayout
        style="@style/AppTheme.ContentHolder"
        android:layout_gravity="center"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_item_size"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/titleLogo"
                android:layout_width="@dimen/title_item_size"
                android:layout_height="match_parent"
                android:background="@drawable/icon_background"
                android:clickable="true"
                android:contentDescription="@string/desc_logo_title"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logo_title" />

            <EditText
                android:id="@+id/titleEdit"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:enabled="true"
                android:gravity="start|center_vertical"
                android:hint="@string/title_edit_hint"
                android:inputType="textCapCharacters"
                android:maxLength="50"
                android:textAllCaps="true"
                android:textColorHighlight="@color/mainLightShadeAlpha"
                android:textColorHint="@color/mainLightShade"
                android:textSize="@dimen/title_text_size"
                android:visibility="gone"
                tools:ignore="LabelFor"
                tools:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tab_item_size"
            android:layout_marginTop="@dimen/content_vertical_spacing"
            android:animateLayoutChanges="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tabText"
                android:layout_width="@dimen/title_item_size"
                android:layout_height="match_parent"
                android:background="@drawable/icon_background"
                android:contentDescription="@string/desc_tab_text"
                android:padding="@dimen/tab_item_padding"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tab_text" />

            <ImageView
                android:id="@+id/tabViews"
                android:layout_width="@dimen/title_item_size"
                android:layout_height="match_parent"
                android:background="@drawable/icon_background"
                android:contentDescription="@string/desc_tab_views"
                android:padding="@dimen/tab_item_padding"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tab_views" />

            <ImageView
                android:id="@+id/tabDestructDate"
                android:layout_width="@dimen/title_item_size"
                android:layout_height="match_parent"
                android:background="@drawable/icon_background"
                android:contentDescription="@string/desc_tab_destruct"
                android:padding="@dimen/tab_item_padding"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tab_destruct" />

            <ImageView
                android:id="@+id/tabDelivery"
                android:layout_width="@dimen/title_item_size"
                android:layout_height="match_parent"
                android:background="@drawable/icon_background"
                android:contentDescription="@string/desc_tab_delivery"
                android:padding="@dimen/tab_item_padding"
                android:scaleType="centerInside"
                android:src="@drawable/ic_tab_delivery" />

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/contentHolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/demoHolder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonCreate"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@drawable/button_background"
            android:text="@string/message_create"
            android:textAllCaps="true"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size" />

    </LinearLayout>

</FrameLayout>
