<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.appifyhub.timecrypt.activities.ReadMessageActivity"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/button_height">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_vertical_spacing"
            android:animateLayoutChanges="true"
            android:gravity="top|center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/title_item_size"
                android:layout_height="@dimen/title_item_size"
                android:layout_marginBottom="@dimen/content_vertical_spacing"
                android:contentDescription="@string/desc_logo_title"
                android:scaleType="centerInside"
                android:src="@drawable/ic_logo_title" />

            <TextView
                android:id="@+id/readInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/text_padding"
                android:textSize="@dimen/display_text_size"
                tools:text="@string/read_info" />

            <EditText
                android:id="@+id/readMessagePassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/single_edit_box_size"
                android:layout_marginBottom="@dimen/content_vertical_spacing"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/single_edit_box_icon_padding"
                android:drawableStart="@drawable/ic_password"
                android:gravity="start|center_vertical"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/text_padding"
                android:paddingRight="@dimen/text_padding"
                android:textColor="@color/mainLightShade"
                android:textColorHighlight="@color/mainLightShadeAlpha"
                android:textColorHint="@color/mainLightShade"
                android:textSize="@dimen/text_size"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView android:id="@+id/readMessageText"
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:fontFamily="sans-serif-light"
                android:gravity="center_horizontal|top"
                android:hint="@string/text_hint"
                android:orientation="vertical"
                android:padding="@dimen/text_padding"
                android:textColorHighlight="@color/mainLightShadeAlpha"
                android:textColorHint="@color/mainLightShade"
                android:textIsSelectable="true"
                android:textSize="@dimen/text_size"
                android:visibility="gone"
                tools:visibility="visible" />

        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/progressOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:background="@drawable/overlay_gradient"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressWheel"
            style="?attr/indeterminateProgressStyle"
            android:layout_width="@dimen/title_item_size"
            android:layout_height="@dimen/title_item_size"
            android:layout_centerInParent="true"
            android:padding="@dimen/tab_item_padding" />

        <TextView
            android:id="@+id/progressReadDisplayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressWheel"
            android:layout_centerHorizontal="true"
            android:text="@string/progress_unlocking"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_background"
            android:text="@string/message_cancel"
            android:textAllCaps="true"
            android:textColor="@color/color_button_text"
            android:textSize="@dimen/button_text_size"
            android:visibility="visible" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonUnlock"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/button_background"
        android:text="@string/read_unlock"
        android:textAllCaps="true"
        android:textColor="@color/color_button_text"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttonCreateNew"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_gravity="bottom|center_horizontal"
        android:background="@drawable/button_background"
        android:text="@string/read_create_own"
        android:textAllCaps="true"
        android:textColor="@color/color_button_text"
        android:textSize="@dimen/button_text_size"
        android:visibility="gone" />

</FrameLayout>
